rename program names

--- a/hw7/Makefile
+++ b/hw7/Makefile
@@ -1,4 +1,4 @@
-all: call_numsort.c Numsort.s
-	arm-elf-gcc -std=c99 -Wall -Wextra -g -o main.o call_numsort.c Numsort.s
+all: call_numsort.c numsort.s
+	arm-elf-gcc -std=c99 -Wall -Wextra -g -o call_numsort.exe call_numsort.c numsort.s
 clean:
 	rm -f *.exe *.o
